--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -17,3 +17,5 @@ jobs:
       - name: Log in to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+
+      - run: echo "Job status is ${{ job.status }}."
